src/main/minigo/parser/.antlr/MiniGoParser.py
# Generated from /Users/peace/btl3-ppl/src/main/minigo/parser/MiniGo.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MiniGoParser ( Parser ):

    grammarFileName = "MiniGo.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "','", "<INVALID>", "'if'", "'else'", 
                     "'for'", "'return'", "'func'", "'type'", "'struct'", 
                     "'interface'", "'const'", "'var'", "'continue'", "'break'", 
                     "'range'", "'.'", "'!'", "';'", "'['", "']'", "'{'", 
                     "'}'", "'('", "')'", "':'", "'='", "'+'", "'-'", "'*'", 
                     "'/'", "'%'", "'&&'", "'||'", "'+='", "'-='", "'*='", 
                     "'/='", "'%='", "':='", "'<'", "'<='", "'>'", "'>='", 
                     "'=='", "'!='", "'//'", "'\\t'", "'\\r'", "'\\'", "'_'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'nil'", "<INVALID>", "<INVALID>", "<INVALID>", "'\\n'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "PRIMITIVE_TYPE", "IF", 
                      "ELSE", "FOR", "RETURN_WORD", "FUNC", "TYPE", "STRUCT", 
                      "INTERFACE", "CONST", "VAR", "CONTINUE", "BREAK", 
                      "RANGE", "DOT", "DIFFERENT", "SEMICOLON", "LEFT_SQUARE_BRACKET", 
                      "RIGHT_SQUARE_BRACKET", "LEFT_BRACE", "RIGHT_BRACE", 
                      "LEFT_PARENTHESES", "RIGHT_PARENTHESES", "COLONS", 
                      "EQUAL", "PLUS", "MINUS", "MULTIPLY", "DIVIDE", "MODULO", 
                      "AND", "OR", "PLUS_EQUAL", "MINUS_EQUAL", "MULTIPLY_EQUAL", 
                      "DIVIDE_EQUAL", "MODULO_EQUAL", "COLONS_EQUAL", "SMALLER", 
                      "SMALLER_EQUAL", "GREATER", "GREATER_EQUAL", "DOUBLE_EQUAL", 
                      "DIFFERENT_EQUAL", "COMMENT", "TAB", "RETURN", "BACKSLASH", 
                      "UNDERSCORE", "INT_LITERALS", "FLOAT_LITERALS", "STRING_LITERALS", 
                      "BOOLEAN_LITERALS", "NIL", "ID", "SINGLE_COMMENT", 
                      "MULTI_COMMENT", "NL", "WS", "ILLEGAL_ESCAPE", "END_NEWLINE", 
                      "END_RETURN_NEWLINE", "END_EOF", "UNCLOSE_STRING", 
                      "ERROR_CHAR" ]

    RULE_expression_string = 0
    RULE_plus_string = 1
    RULE_term_plus = 2
    RULE_expression_float = 3
    RULE_add_float = 4
    RULE_mul_float = 5
    RULE_unary_float = 6
    RULE_term_float = 7
    RULE_expression_int = 8
    RULE_add_int = 9
    RULE_mul_int = 10
    RULE_unary_int = 11
    RULE_term_int = 12
    RULE_expression_boolean = 13
    RULE_and_boolean = 14
    RULE_compare_boolean = 15
    RULE_unary_boolean = 16
    RULE_term_boolean = 17
    RULE_expression_array = 18
    RULE_array_size = 19
    RULE_arrays_type = 20
    RULE_array_instance = 21
    RULE_array_value = 22
    RULE_array_idx = 23
    RULE_array_access_field = 24
    RULE_arr_name = 25
    RULE_access_field = 26
    RULE_field = 27
    RULE_struct_value = 28
    RULE_field_value = 29
    RULE_relational = 30
    RULE_other_operations = 31
    RULE_program = 32
    RULE_decl = 33
    RULE_funcdecl = 34
    RULE_funcParams = 35
    RULE_funcParam = 36
    RULE_funcListName = 37
    RULE_funcType = 38
    RULE_block = 39
    RULE_receiver = 40
    RULE_structdecl = 41
    RULE_struct_field = 42
    RULE_struct_fieldType = 43
    RULE_interfacedecl = 44
    RULE_interface_field = 45
    RULE_interfaceParams = 46
    RULE_interfaceParam = 47
    RULE_interfaceListName = 48
    RULE_interfaceType = 49
    RULE_vardecl = 50
    RULE_varType = 51
    RULE_constdecl = 52
    RULE_shortvardecl = 53
    RULE_lhs = 54
    RULE_assign_operators = 55
    RULE_returndecl = 56
    RULE_callfuncdecl = 57
    RULE_argu_list = 58
    RULE_value_assign = 59
    RULE_breakdecl = 60
    RULE_continuedecl = 61
    RULE_ifelsedecl = 62
    RULE_elifdecls = 63
    RULE_elifdecl = 64
    RULE_elsedecl = 65
    RULE_ifelsedecl_inside_loop = 66
    RULE_elifdecls_inside_loop = 67
    RULE_elifdecl_inside_loop = 68
    RULE_elsedecl_inside_loop = 69
    RULE_forloopdecl = 70
    RULE_for_access_value = 71
    RULE_for_arr = 72
    RULE_block_inside_loop = 73
    RULE_initialization = 74
    RULE_condition = 75
    RULE_update = 76

    ruleNames =  [ "expression_string", "plus_string", "term_plus", "expression_float", 
                   "add_float", "mul_float", "unary_float", "term_float", 
                   "expression_int", "add_int", "mul_int", "unary_int", 
                   "term_int", "expression_boolean", "and_boolean", "compare_boolean", 
                   "unary_boolean", "term_boolean", "expression_array", 
                   "array_size", "arrays_type", "array_instance", "array_value", 
                   "array_idx", "array_access_field", "arr_name", "access_field", 
                   "field", "struct_value", "field_value", "relational", 
                   "other_operations", "program", "decl", "funcdecl", "funcParams", 
                   "funcParam", "funcListName", "funcType", "block", "receiver", 
                   "structdecl", "struct_field", "struct_fieldType", "interfacedecl", 
                   "interface_field", "interfaceParams", "interfaceParam", 
                   "interfaceListName", "interfaceType", "vardecl", "varType", 
                   "constdecl", "shortvardecl", "lhs", "assign_operators", 
                   "returndecl", "callfuncdecl", "argu_list", "value_assign", 
                   "breakdecl", "continuedecl", "ifelsedecl", "elifdecls", 
                   "elifdecl", "elsedecl", "ifelsedecl_inside_loop", "elifdecls_inside_loop", 
                   "elifdecl_inside_loop", "elsedecl_inside_loop", "forloopdecl", 
                   "for_access_value", "for_arr", "block_inside_loop", "initialization", 
                   "condition", "update" ]

    EOF = Token.EOF
    T__0=1
    PRIMITIVE_TYPE=2
    IF=3
    ELSE=4
    FOR=5
    RETURN_WORD=6
    FUNC=7
    TYPE=8
    STRUCT=9
    INTERFACE=10
    CONST=11
    VAR=12
    CONTINUE=13
    BREAK=14
    RANGE=15
    DOT=16
    DIFFERENT=17
    SEMICOLON=18
    LEFT_SQUARE_BRACKET=19
    RIGHT_SQUARE_BRACKET=20
    LEFT_BRACE=21
    RIGHT_BRACE=22
    LEFT_PARENTHESES=23
    RIGHT_PARENTHESES=24
    COLONS=25
    EQUAL=26
    PLUS=27
    MINUS=28
    MULTIPLY=29
    DIVIDE=30
    MODULO=31
    AND=32
    OR=33
    PLUS_EQUAL=34
    MINUS_EQUAL=35
    MULTIPLY_EQUAL=36
    DIVIDE_EQUAL=37
    MODULO_EQUAL=38
    COLONS_EQUAL=39
    SMALLER=40
    SMALLER_EQUAL=41
    GREATER=42
    GREATER_EQUAL=43
    DOUBLE_EQUAL=44
    DIFFERENT_EQUAL=45
    COMMENT=46
    TAB=47
    RETURN=48
    BACKSLASH=49
    UNDERSCORE=50
    INT_LITERALS=51
    FLOAT_LITERALS=52
    STRING_LITERALS=53
    BOOLEAN_LITERALS=54
    NIL=55
    ID=56
    SINGLE_COMMENT=57
    MULTI_COMMENT=58
    NL=59
    WS=60
    ILLEGAL_ESCAPE=61
    END_NEWLINE=62
    END_RETURN_NEWLINE=63
    END_EOF=64
    UNCLOSE_STRING=65
    ERROR_CHAR=66

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Expression_stringContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def plus_string(self):
            return self.getTypedRuleContext(MiniGoParser.Plus_stringContext,0)


        def expression_string(self):
            return self.getTypedRuleContext(MiniGoParser.Expression_stringContext,0)


        def relational(self):
            return self.getTypedRuleContext(MiniGoParser.RelationalContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_expression_string



    def expression_string(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MiniGoParser.Expression_stringContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 0
        self.enterRecursionRule(localctx, 0, self.RULE_expression_string, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self.plus_string(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 163
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = MiniGoParser.Expression_stringContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_expression_string)
                    self.state = 157
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 158
                    self.relational()
                    self.state = 159
                    self.plus_string(0) 
                self.state = 165
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Plus_stringContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term_plus(self):
            return self.getTypedRuleContext(MiniGoParser.Term_plusContext,0)


        def plus_string(self):
            return self.getTypedRuleContext(MiniGoParser.Plus_stringContext,0)


        def PLUS(self):
            return self.getToken(MiniGoParser.PLUS, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_plus_string



    def plus_string(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MiniGoParser.Plus_stringContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_plus_string, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 167
            self.term_plus()
            self._ctx.stop = self._input.LT(-1)
            self.state = 174
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = MiniGoParser.Plus_stringContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_plus_string)
                    self.state = 169
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 170
                    self.match(MiniGoParser.PLUS)
                    self.state = 171
                    self.term_plus() 
                self.state = 176
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Term_plusContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING_LITERALS(self):
            return self.getToken(MiniGoParser.STRING_LITERALS, 0)

        def ID(self):
            return self.getToken(MiniGoParser.ID, 0)

        def access_field(self):
            return self.getTypedRuleContext(MiniGoParser.Access_fieldContext,0)


        def expression_array(self):
            return self.getTypedRuleContext(MiniGoParser.Expression_arrayContext,0)


        def LEFT_PARENTHESES(self):
            return self.getToken(MiniGoParser.LEFT_PARENTHESES, 0)

        def expression_string(self):
            return self.getTypedRuleContext(MiniGoParser.Expression_stringContext,0)


        def RIGHT_PARENTHESES(self):
            return self.getToken(MiniGoParser.RIGHT_PARENTHESES, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_term_plus




    def term_plus(self):

        localctx = MiniGoParser.Term_plusContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_term_plus)
        try:
            self.state = 185
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 177
                self.match(MiniGoParser.STRING_LITERALS)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 178
                self.match(MiniGoParser.ID)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 179
                self.access_field(0)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 180
                self.expression_array()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 181
                self.match(MiniGoParser.LEFT_PARENTHESES)
                self.state = 182
                self.expression_string(0)
                self.state = 183
                self.match(MiniGoParser.RIGHT_PARENTHESES)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expression_floatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def add_float(self):
            return self.getTypedRuleContext(MiniGoParser.Add_floatContext,0)


        def expression_float(self):
            return self.getTypedRuleContext(MiniGoParser.Expression_floatContext,0)


        def relational(self):
            return self.getTypedRuleContext(MiniGoParser.RelationalContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_expression_float



    def expression_float(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MiniGoParser.Expression_floatContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 6
        self.enterRecursionRule(localctx, 6, self.RULE_expression_float, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 188
            self.add_float(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 196
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = MiniGoParser.Expression_floatContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_expression_float)
                    self.state = 190
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 191
                    self.relational()
                    self.state = 192
                    self.add_float(0) 
                self.state = 198
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Add_floatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mul_float(self):
            return self.getTypedRuleContext(MiniGoParser.Mul_floatContext,0)


        def add_float(self):
            return self.getTypedRuleContext(MiniGoParser.Add_floatContext,0)


        def PLUS(self):
            return self.getToken(MiniGoParser.PLUS, 0)

        def MINUS(self):
            return self.getToken(MiniGoParser.MINUS, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_add_float



    def add_float(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MiniGoParser.Add_floatContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_add_float, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 200
            self.mul_float(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 207
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = MiniGoParser.Add_floatContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_add_float)
                    self.state = 202
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 203
                    _la = self._input.LA(1)
                    if not(_la==27 or _la==28):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 204
                    self.mul_float(0) 
                self.state = 209
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Mul_floatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def unary_float(self):
            return self.getTypedRuleContext(MiniGoParser.Unary_floatContext,0)


        def mul_float(self):
            return self.getTypedRuleContext(MiniGoParser.Mul_floatContext,0)


        def MULTIPLY(self):
            return self.getToken(MiniGoParser.MULTIPLY, 0)

        def DIVIDE(self):
            return self.getToken(MiniGoParser.DIVIDE, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_mul_float


